# dash-chat

./: .gitignore  README.md  justfile  mprocs.yaml  package.json  pnpm-lock.yaml
crates/dashchat-node/src/: contact.rs  error.rs  filesystem.rs  lib.rs  local_store.rs  node.rs  payload.rs
crates/dashchat-node/src/local_store/: contact_code.rs  impls.rs
crates/dashchat-node/src/stores/: op_store.rs
crates/dashchat-node/src/testing/: behavior.rs  test_node.rs
crates/dashchat-node/tests/: contact_code.rs
crates/mailbox-client/src/: manager.rs
crates/mailbox-server/: Cargo.toml
crates/mailbox-server/src/: cleanup.rs  lib.rs  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: filesystem.rs  lib.rs  mailbox.rs  menu.rs  settings.rs  tray.rs
src-tauri/src/commands/: contacts.rs
ui/messages/: en.json
ui/src/routes/add-contact/: +page.svelte
ui/src/routes/direct-messages/[chatId]/: +page.svelte
