[package]
name = "mailbox-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mailbox-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
redb = "3.1"
thiserror = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.0", features = ["v7"] }
clap = { version = "4.5", features = ["derive"] }

[features]
test_utils = ["dep:axum-test", "dep:tempfile"]

[dependencies.axum-test]
version = "16.4"
optional = true

[dependencies.tempfile]
version = "3.14"
optional = true

[dev-dependencies]
mailbox-server = { path = ".", features = ["test_utils"] }
futures = "0.3"
serial_test = "3"
